# cdk-lab-ecs-streamlit

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt
cdk_lab_ecs_streamlit/: cdk_lab_ecs_streamlit_stack.py
stacks/: ecs_stack.py  vpc_stack.py
streamlit-app/: Dockerfile  Home.py
tests/unit/: test_cdk_lab_ecs_streamlit_stack.py
